--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/OPTIONS FOR LOGIN.png"
-										class="accordion__icon" alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/OPTIONS FOR LOGIN.png" class="accordion__icon"
+										alt="Accordion Icon">
 									What are the login options available for me?
 								</h3>
 								<div class="accordion__content">
@@ -546,8 +546,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/DELETE ACCOUNT.png"
-										class="accordion__icon" alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/DELETE ACCOUNT.png" class="accordion__icon"
+										alt="Accordion Icon">
 									How can I delete my Shayar account?
 								</h3>
 								<div class="accordion__content">
@@ -570,8 +570,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/OFFENSIVE CONTENT.png"
-										class="accordion__icon" alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/OFFENSIVE CONTENT.png" class="accordion__icon"
+										alt="Accordion Icon">
 									How can I report offensive or questionable content?
 								</h3>
 								<div class="accordion__content">
@@ -583,8 +583,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/CHANGE MY USERNAME.png"
-										class="accordion__icon" alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/CHANGE MY USERNAME.png" class="accordion__icon"
+										alt="Accordion Icon">
 									How can I change my username?
 								</h3>
 								<div class="accordion__content">
@@ -608,8 +608,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/LIKE AND COMMENT.png"
-										class="accordion__icon" alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/LIKE AND COMMENT.png" class="accordion__icon"
+										alt="Accordion Icon">
 									How can I like and comment on a video?
 
 								</h3>
@@ -655,21 +655,21 @@
 			<!-- Video -->
 			<div class="video">
 				<a href="https://www.youtube.com/watch?v=pDgkmP1e8Uo" class="video__holder">
-				<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
+					<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
 					title="YouTube video player" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen class="video__holder"></iframe> -->
-				<!-- <iframe width="1920px" height="1080px" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
+					<!-- <iframe width="1920px" height="1080px" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen class="video__holder js-video video__primary"></iframe> -->
-				<img src="assets/img/common/Video Image/video2.jpg" class="video__primary"
-					alt="Primary Video Thumbnail">
-				<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--left"
-					alt="Secondary Video Thumbnail">
-				<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--right"
-					alt="Secondary Video Thumbnail">
-				<span class="video__button"></span>
+					<img src="assets/img/common/Video Image/video2.jpg" class="video__primary"
+						alt="Primary Video Thumbnail">
+					<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--left"
+						alt="Secondary Video Thumbnail">
+					<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--right"
+						alt="Secondary Video Thumbnail">
+					<span class="video__button"></span>
 				</a>
 			</div>
 			<!-- End of Video -->
@@ -1140,7 +1140,8 @@
 							</h2>
 							<!-- End of Section Title -->
 							<!-- Section Subtitle -->
-							<p class="section-subtitle section-subtitle--center ">What Our User's Say About Us</p>
+							<p class="section-subtitle section-subtitle--center"
+								style="font-family: 'Open Sans', sans-serif;">What Our User's Say About Us</p>
 							<!-- End of Section Subtitle -->
 						</div>
 					</div>
@@ -1799,8 +1800,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/Relates your daily mood.png"
-								alt="course" />
+							<img src="assets/img/common/Features/Relates your daily mood.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Related your daily mood</h2>
 								<!-- <p>
@@ -1813,8 +1813,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/Shayari in Video, Text or Image.png"
-								alt="course" />
+							<img src="assets/img/common/Features/Shayari in Video, Text or Image.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Shayari's in video, Text or Images</h2>
 								<!-- <p>
@@ -1866,8 +1865,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/Participate in Battles.png"
-								alt="course" />
+							<img src="assets/img/common/Features/Participate in Battles.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Participate in Battle</h2>
 								<!-- <p>
@@ -1906,8 +1904,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/Social community of Shayars.png"
-								alt="course" />
+							<img src="assets/img/common/Features/Social community of Shayars.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Social Community of Shayar</h2>
 								<!-- <p>
